# pxengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: resources.cmake  shaders.cmake
data/: test.as
data/core/: meta.yaml
data/core/font/: roboto.yaml
data/core/lang/: be.yaml  en.yaml  ru.yaml
data/core/script/: angel_behaviour.as  fps_camera.as  include.ash  main.as
data/core/shaders/: cube.yaml  default.f.glsl  default.v.glsl  imgui.yaml  imgui_image.yaml
data/example/: meta.yaml
data/example/scripts/: main.as
examples/: CMakeLists.txt
examples/00-helloworld/: CMakeLists.txt  main.cpp
examples/01-model/: CMakeLists.txt  main.cpp
examples/02-scripts/: CMakeLists.txt  entity.cpp  entity.hpp  main.cpp  player.cpp  player.hpp  some_manager.cpp  some_manager.hpp
examples/02-sprites/: main.cpp
examples/03-sprites/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
ext/include/imgui/: CMakeLists.txt
google_tests/: CMakeLists.txt  bit_array.cpp  memory_stream_test.cpp  raw_memory_test.cpp  string_utils_test.cpp  system_test.cpp  threading_task_queue_test.cpp
google_tests/engine/: resource_manager.cpp
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp  general.hpp  settings.hpp
src/engine/3d/: cube.cpp  cube.hpp
src/engine/common/: dynamic_enum.cpp  dynamic_enum.hpp  format.hpp  frame_limiter.cpp  frame_limiter.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp
src/engine/common/imgui/: imgui.cpp  imgui.hpp  vs_ocornut_imgui.sc
src/engine/events/: event.hpp  event_fabric.hpp  event_listener.hpp  event_manager.cpp  event_manager.hpp  events.hpp
src/engine/graphics/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  shader.hpp  vertex_array.hpp
src/engine/graphics/gl/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp
src/engine/math/: matrix.hpp  vector.hpp
src/engine/resources/: bgfx_handle.hpp  resource_manager.cpp  resource_manager.hpp
src/engine/scripts/: binding.cpp  binding.hpp  docgen.cpp  engine.cpp  engine.hpp  function.cpp  function.hpp  module.cpp  module.hpp
src/engine/scripts/addons/: scriptarray.cpp  scriptbuilder.cpp  scriptbuilder.h
src/engine/shaders/: vs_cubes.sc
src/engine/system/: general.hpp  keycodes.hpp  window.cpp  window.hpp
src/engine/ui/debug/: info_window.cpp  info_window.hpp
src/engine/utils/: bgfx_utils.cpp  bgfx_utils.hpp
src/engine/world/: game_object.cpp  game_object.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
src/game/gameobjects/: player.cpp  player.hpp
src/game/magic/: magic_matrix.hpp  magic_token.hpp  mana.hpp
src/px/: binary_tree.cpp  binary_tree.hpp  bit_array.hpp  exception.hpp  exports.hpp  hash_utils.hpp  macros.hpp  memory_stream.cpp  memory_stream.hpp  px.cpp  px.hpp  raw_memory.hpp  serializable.hpp  string_utils.hpp  system.hpp  templates.hpp  visit_overloaded.hpp
src/px/engine/: CMakeLists.txt  engine.cpp  engine.hpp  general.hpp  module.cpp  module.hpp  settings.hpp
src/px/engine/3d/: cube.cpp  cube.hpp
src/px/engine/common/: controls.cpp  controls.hpp  dynamic_enum.cpp  dynamic_enum.hpp  format.hpp  frame_limiter.cpp  frame_limiter.hpp  utils.cpp  utils.hpp
src/px/engine/common/imgui/: fs_imgui_image.sc  fs_ocornut_imgui.sc  imgui.cpp  imgui.hpp  vs_imgui_image.sc
src/px/engine/components/: component.cpp  component.hpp  transform.cpp  transform.hpp
src/px/engine/components/graphics/: model_renderer.cpp  model_renderer.hpp  sprite_renderer.cpp  sprite_renderer.hpp
src/px/engine/events/: event.hpp  event_fabric.hpp  event_listener.cpp  event_listener.hpp  event_manager.cpp  event_manager.hpp
src/px/engine/events/common/: key_event.hpp  mouse_event.hpp
src/px/engine/graphics/: camera.cpp  camera.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  render_states.cpp  render_states.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vertex.hpp
src/px/engine/math/: matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
src/px/engine/resources/: bgfx_handle.hpp  localization.cpp  localization.hpp  registries.cpp  registries.hpp  registry.cpp  registry.hpp  resource_manager.cpp  resource_manager.hpp  resource_traits.cpp  resource_traits.hpp
src/px/engine/scripts/: angel_behaviour.cpp  angel_behaviour.hpp  binding.cpp  binding.hpp  script_engine.cpp  script_engine.hpp
src/px/engine/shaders/: fs_mesh.sc  vs_mesh.sc
src/px/engine/system/: general.cpp  general.hpp  keycodes.hpp  window.cpp  window.hpp
src/px/engine/ui/: settings_window.cpp  settings_window.hpp  widgets.hpp
src/px/engine/ui/debug/: info_window.cpp  info_window.hpp
src/px/engine/utils/: bgfx_utils.hpp
src/px/engine/world/: game_object.cpp  game_object.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
src/px/memory/: i_ref_counting.cpp  i_ref_counting.hpp  ref.cpp  ref.hpp  ref_counting.cpp  ref_counting.hpp  weak_ref.cpp  weak_ref.hpp
src/px/script/: angel_script.cpp  angel_script.hpp  as_counter.cpp  as_counter.hpp  common.cpp  common.hpp  exceptions.hpp  function.cpp  function.hpp  module.cpp  module.hpp  module_builder.cpp  module_builder.hpp  object_type.cpp  object_type.hpp  object_type_builder.cpp  object_type_builder.hpp
src/px/script/addons/scripttypeof/: c_script_type_of.cpp  c_script_type_of.hpp
src/px/script/template/: as_function.hpp  names.hpp  signatures.hpp
src/px/script/type_builder/: common.hpp  ref.hpp  value.hpp  weak_ref.hpp
src/px/threading/: task_queue.hpp
src/px/utils/: constexpr_hash.hpp  static_warning.hpp
